[rpglitch] style: prevent text overflow in file input and refactor hide/show element functions to use properties

--- a/apps/rpglitch/RPGlitch.scss
+++ b/apps/rpglitch/RPGlitch.scss
@@ -728,6 +728,7 @@ input[type="file"] {
   cursor: pointer;
   text-align: center;
   text-wrap: balance;
+  white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
